# Agent-Roaster

./: .gitignore  LICENSE  README.md  mcp_config.json
.github/workflows/: rust.yml  (+1 more)
agent-lightning-rs/: .gitignore  Cargo.toml  check.err  check_output.txt  check_output_utf8.txt  test_out.txt  test_utf8.txt
agent-lightning-rs/.cargo/: config.toml
agent-lightning-rs/data/exports/: ppo_agent_1773140290.csv  ppo_agent_1773140457.csv  ppo_agent_1773141877.csv
agent-lightning-rs/data/roasting_profiles/processed/: roast_profile_demo.json
agent-lightning-rs/data/roasting_profiles/raw/: roast_timeseries.csv  standard_roast.csv
agent-lightning-rs/docs/: algorithm_analysis.md  module_analysis.md
agent-lightning-rs/src/: lib.rs  main.rs  mcp_server.rs
agent-lightning-rs/src/agents/: llm_agent.rs  mod.rs  roaster_optimizer.rs  routing.rs
agent-lightning-rs/src/core/: activation.rs  loss.rs  mod.rs  optimizer.rs  tensor.rs
agent-lightning-rs/src/envs/: cartpole.rs  coffee_roaster.rs  gridworld.rs  mod.rs  state_estimator.rs
agent-lightning-rs/src/guardrails/: mod.rs  pii.rs
agent-lightning-rs/src/lightning/: client.rs  mod.rs  pomdp.rs  reward.rs  server.rs
agent-lightning-rs/src/memory/: mod.rs
agent-lightning-rs/src/nn/: attention.rs  backprop.rs  layer.rs  mod.rs  network.rs  normalization.rs  transformer.rs
agent-lightning-rs/src/providers/: mod.rs
agent-lightning-rs/src/realtime/: control_panel.rs  mod.rs
agent-lightning-rs/src/rl/: buffer.rs  credit_assignment.rs  env.rs  grpo.rs  hierarchical.rs  lightning_rl.rs  mod.rs  ppo.rs  transition.rs
agent-lightning-rs/src/security/: bounds.rs
agent-lightning-rs/src/training/: checkpoint.rs  coffee_dataset.rs  config.rs  dataset.rs  exporter.rs  logger.rs  mod.rs  training_loop.rs
agent-lightning-rs/src/ui/: dashboard.rs
