[package]
name = "agent-lightning-rs"
version = "0.1.0"
edition = "2021"
authors = ["Agent Lightning Rust"]
description = "A from-scratch Reinforcement Learning agent training framework inspired by Microsoft Agent Lightning"
default-run = "agent-lightning"

[[bin]]
name = "agent-lightning"
path = "src/main.rs"

[[bin]]
name = "mcp-server"
path = "src/mcp_server.rs"

[lib]
name = "agent_lightning"
path = "src/lib.rs"

# ZERO external dependencies — pure Rust stdlib only.
# rand removed because rand 0.8 pulls zerocopy which needs proc-macros.
# Random number generation is handled by our own LCG in core/tensor.rs.
[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
