[package]
name = "agent-roaster"
version = "0.1.0"
edition = "2021"
authors = ["Agent-Roaster Team"]
description = "An ultra-fast, memory-safe AI Agent Framework in Rust."

[lib]
name = "agent_roaster"
path = "src/lib.rs"

[dependencies]
# Core async and serialization
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
regex = "1.0"

# Optional features
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
webrtc = { version = "0.10", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

[features]
default = ["agents", "guardrails"]
agents = []
guardrails = []
realtime = ["tokio-tungstenite", "webrtc", "uuid"]
providers = ["reqwest"]
roaster = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
